--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 <title>COAST</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="apple-touch-icon" href="images/favicon.ico">
-<link rel="stylesheet" href="style/coast.css">
+<link rel="stylesheet" href="/index.css">
 <script type="text/javascript" src="js/coast.js" charset="utf-8" defer></script>
 </head>
 <body>
