--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 		</p>
 		<p>
 			<button id="btn1" data-file="10Mb.bin">10Mb</button>
-			<button id="btn2" disabled>100Mb</button>
-			<button id="btn3" disabled>1Gb</button>
+			<button id="btn1" data-file="100Mb.bin">100Mb</button>
+			<button id="btn1" data-file="1Gb.bin">1Gb</button>
 		</p>
 		<p id="download-box" class="dl-result-1">
 			<span id="result">Speedtest</span><br>
