--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
 	</div>
-	<div class="result-stats" style="display:none;">
+	<div class="result-stats" >
 		<table style="width: 100%;">
 			<tr style="width: 100%;">
 				<td>
