--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		</p>
 		<p>
 			<button id="btn1" data-file="10Mb.bin">10Mb</button>
+			<button id="btn1" data-file="25Mb.bin">25Mb</button>
 		</p>
 		<p id="download-box" class="dl-result-1">
 			<span id="result">Speedtest</span><br>
