--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<textarea id="dl-stats"></textarea>
 				</td>
 				<td>
-					<textarea id="ul-stats"></textarea>
+					<textarea id="ul-stats" style="display:none;"></textarea>
 				</td>
 			</tr>
 		</table>
