--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 
 
 	</div>
-	<div class="result-stats" >
+	<div class="result-stats" style="display:none;">
 		<table style="width: 100%;">
 			<tr style="width: 100%;">
 				<td>
 					<textarea id="dl-stats"></textarea>
 				</td>
 				<td>
-					<textarea id="ul-stats" style="display:none;"></textarea>
+					<textarea id="ul-stats"></textarea>
 				</td>
 			</tr>
 		</table>
