--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <title>COAST</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../index.css">
-<script type="text/javascript" src="../js/coast.js" charset="utf-8" defer></script>
+<link rel="stylesheet" href="/coast/index.css">
+<script type="text/javascript" src="/coast/js/coast.js" charset="utf-8" defer></script>
 </head>
 <body>
 
