--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>COAST</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="apple-touch-icon" href="/coast/favicon.ico">
+<link rel="icon" type="image/x-icon" href="/coast/favicon.ico">
 <link rel="stylesheet" href="/coast/index.css">
 <script type="text/javascript" src="/coast/js/coast.js" charset="utf-8" defer></script>
 </head>
