update index and script

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="apple-touch-icon" href="/coast/favicon.ico">
 <link rel="icon" type="image/x-icon" href="/coast/favicon.ico">
-<link rel="stylesheet" href="/coast/index.css">
+<link rel="stylesheet" href="/coast/styles/index.css">
 <script type="text/javascript" src="/coast/js/coast.js" charset="utf-8" defer></script>
 </head>
 <body>
@@ -33,7 +33,7 @@
 			<progress value="0" max="100"></progress>
 		</p>
 		<p>
-			
+
 			<button id="btn1" data-file="25Mb.bin">Run Speed Test</button>
 		</p>
 		<p id="download-box" class="dl-result-1">
