update index and css for dl-chart element

--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
 	<button id="btnx" data-file="" >Cancel</button>
 
 	<div class="result-wrapper">
-		<p  id="dl-chart" ></p>
+		<p  id="dl-chart" style="display: block;"></p>
 		<p>
 			<progress value="0" max="100"></progress>
 		</p>
 		<p>
-
 			<button id="btn1" data-file="25Mb.bin">Run Speed Test</button>
 		</p>
 		<p id="download-box" class="dl-result-1">
