--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 			<progress value="0" max="100"></progress>
 		</p>
 		<p>
-			<button id="btn1" data-file="25Mb.bin">Run Speed Test</button>
+			<button id="btn1" data-file="5Mb.bin">5Mb</button>
+			<button id="btn2" data-file="10Mb.bin">10Mb</button>
+			<button id="btn3" data-file="25Mb.bin">25Mb</button>
 		</p>
 		<p id="download-box" class="dl-result-1">
 			<span id="result">Speedtest</span><br>
