--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             var speedButton = document.getElementById('speed-check');
             speedButton.addEventListener('click', InitiateSpeedDetection, false);
 
-            var imageAddr = "/images/icon.png";
+            var imageAddr = "/coast/images/icon.png";
             var downloadSize = 13055440;
             
             function ShowProgressMessage(msg) {
