--- a/index.html
+++ b/index.html
@@ -1,61 +1,78 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Internet speed test</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    </head>
-    <body>
-        <div class="container">
-            <div class="row text-center my-5">
-                <button class="btn btn btn-success btn-lg" id="speed-check">Start</button>
-            </div>
-            <div id="result"></div>
-        </div>
-        <script type="text/javascript">
-            var speedButton = document.getElementById('speed-check');
-            speedButton.addEventListener('click', InitiateSpeedDetection, false);
+<html lang="us" xml:lang="us" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>COAST</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="apple-touch-icon" href="/coast/favicon.ico">
+<link rel="icon" type="image/x-icon" href="/coast/favicon.ico">
+<link rel="stylesheet" href="/coast/styles/index.css">
+<script type="text/javascript" src="/coast/js/coast.js" charset="utf-8" defer></script>
+</head>
+<body>
 
-            var imageAddr = "/coast/images/icons/icon.png";
-            var downloadSize = 13055440;
-            
-            function ShowProgressMessage(msg) {
-                document.getElementById('result').innerHTML = msg;
-            }
+<div id="wrap">
 
-            function InitiateSpeedDetection() {
-                ShowProgressMessage("Checking speed, please wait...");
-                window.setTimeout(MeasureConnectionSpeed, 0);
-            };
+	<p class="circ-wrapper">
+		<div class="circ"></div>
+		<div class="circ-handle-wrapper">
+			<div id="handle" class="circ-handle"></div>
 
-            function MeasureConnectionSpeed() {
-                var startTime, endTime;
-                var download = new Image();
-                download.onload = function () {
-                    endTime = (new Date()).getTime();
-                    showResults();
-                }
-                download.onerror = function (err, msg) {
-                    ShowProgressMessage("Invalid image, or error downloading");
-                }
-                startTime = (new Date()).getTime();
-                var cacheBuster = "?nnn=" + startTime;
-                download.src = imageAddr + cacheBuster;
-                function showResults() {
-                    var duration = (endTime - startTime) / 1000;
-                    var bitsLoaded = downloadSize * 8;
-                    var speedBps = (bitsLoaded / duration).toFixed(2);
-                    var speedKbps = (speedBps / 1024).toFixed(2);
-                    var speedMbps = (speedKbps / 1024).toFixed(2);
+		</div>
+	</p>
+	<div id="l1" class="circ-label circ-l1">0</div>
+	<div id="l2" class="circ-label circ-l2">15</div>
+	<div id="l3" class="circ-label circ-l3">25</div>
+	<div id="l4" class="circ-label circ-l4">37</div>
+	<div id="l5" class="circ-label circ-l5">50Mb</div>
 
-                    if (speedMbps > 1) {
-                        ShowProgressMessage("Your connection speed is "+speedMbps+" Mbps");
-                    } else if (speedKbps > 1) {
-                        ShowProgressMessage("Your connection speed is "+speedKbps+" kbps");
-                    } else {
-                        ShowProgressMessage("Your connection speed is "+speedBps+" bps");
-                    }
-                }
-            }
-        </script>
-    </body>
+	<button id="btnx" data-file="" >Cancel</button>
+
+	<div class="result-wrapper">
+		<p id="dl-chart" style="display: none;"></p>
+		<p>
+			<progress value="0" max="100"></progress>
+		</p>
+		<p>
+			<button id="btn1" data-file="5Mb.bin">5Mb</button>
+			<button id="btn2" data-file="10Mb.bin">10Mb</button>
+			<button id="btn3" data-file="25Mb.bin">25Mb</button>
+		</p>
+		<p id="download-box" class="dl-result-1">
+			<span id="result">Speedtest</span><br>
+			<span id="eta">choose a size</span>
+		</p>
+
+		<p>
+			<div id="latency-box" class="box-latency-upload">
+				<span class="gauge-label">&#x21D4;&nbsp;Latency:&nbsp;</span><br></br>
+				<span id="latency" >0&nbsp;s</span><br></br>
+			</div>
+
+			<div id="upload-box" class="box-latency-upload">
+				<span class="gauge-label">&#x21D1;&nbsp;Upload:&nbsp;</span>
+				<div class="line"></div><br>
+				<div id="speed" style="display: none;">speed: 0 Mbs</div>
+				<div id="average"> 0 Mbs</div>
+			</div>
+
+		</p>
+
+
+	</div>
+	<div class="result-stats" style="display:none;">
+		<table style="width: 100%;">
+			<tr style="width: 100%;">
+				<td>
+					<textarea id="dl-stats"></textarea>
+				</td>
+				<td>
+					<textarea id="ul-stats"></textarea>
+				</td>
+			</tr>
+		</table>
+	</div>
+
+</div>
+<p class="ua"><script>document.write(window.navigator.userAgent)</script></p>
+</body>
 </html>
