--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<button id="btnx" data-file="" >Cancel</button>
 
 	<div class="result-wrapper">
-		<p id="dl-chart" style="display: none;"></p>
+		<p id="dl-chart" ></p>
 		<p>
 			<progress value="0" max="100"></progress>
 		</p>
