--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 <html lang="us" xml:lang="us" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>COAST</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0"/>
-<link rel="apple-touch-icon" href="/coast/favicon.ico" />
-<link rel="icon" type="image/x-icon" href="/coast/favicon.ico" />
-<link rel="stylesheet" href="/coast/styles/index.css" />
-<script type="text/javascript" src="/coast/js/coast.js" charset="utf-8" defer></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="apple-touch-icon" href="/coast-express/favicon.ico">
+<link rel="icon" type="image/x-icon" href="/coast-express/favicon.ico">
+<link rel="stylesheet" href="/coast-express/styles/index.css">
+<script type="text/javascript" src="/coast-express/js/coast.js" charset="utf-8" defer></script>
 </head>
 <body>
 
@@ -54,7 +51,7 @@
 			<div id="upload-box" class="box-latency-upload">
 				<span class="gauge-label">&#x21D1;&nbsp;Upload:&nbsp;</span>
 				<div class="line"></div><br>
-				<div id="speed" style="display: none;">speed: 0 Mbs</div>
+				<div id="speed" >speed: 0 Mbs</div>
 				<div id="average"> 0 Mbs</div>
 			</div>
 
