--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div id="l2" class="circ-label circ-l2">15</div>
 	<div id="l3" class="circ-label circ-l3">25</div>
 	<div id="l4" class="circ-label circ-l4">37</div>
-	<div id="l5" class="circ-label circ-l5">50Mb</div>
+	<div id="l5" class="circ-label circ-l5">50MB</div>
 
 	<button id="btnx" data-file="" >Cancel</button>
 
@@ -33,9 +33,9 @@
 			<progress value="0" max="100"></progress>
 		</p>
 		<p>
-			<button id="btn1" data-file="5Mb.bin">5Mb</button>
-			<button id="btn2" data-file="10Mb.bin">10Mb</button>
-			<button id="btn3" data-file="25Mb.bin">25Mb</button>
+			<button id="btn1" data-file="5Mb.bin">5MB</button>
+			<button id="btn2" data-file="10Mb.bin">10MB</button>
+			<button id="btn3" data-file="25Mb.bin">25MB</button>
 		</p>
 		<p id="download-box" class="dl-result-1">
 			<span id="result">Speedtest</span><br>
@@ -51,8 +51,8 @@
 			<div id="upload-box" class="box-latency-upload">
 				<span class="gauge-label">&#x21D1;&nbsp;Upload:&nbsp;</span>
 				<div class="line"></div><br>
-				<div id="speed" >speed: 0 Mbs</div>
-				<div id="average"> 0 Mbs</div>
+				<div id="speed" ></div>
+				<div id="average"> 0 MBs</div>
 			</div>
 
 		</p>
